--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "@types/node": "^16.18.53",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
-    "react-icons": "^4.11.0",
-    "react-router-dom": "^6.16.0",
     "axios": "^1.5.1",
     "browserify-zlib": "^0.2.0",
     "express": "^4.18.2",
@@ -22,9 +20,12 @@
     "mongoose": "^7.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -33,7 +34,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "devStart": "nodemon server.ts"
+    "devStart": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": [
