--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
+    "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
     "react-modern-drawer": "^1.2.2",
-    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.3",
@@ -66,10 +66,11 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
     "@mui/material": "^5.14.11",
+    "@types/leaflet": "^1.9.6",
     "dotenv": "^16.3.1",
     "nodemon": "^3.0.1"
   }
