--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-modern-drawer": "^1.2.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.8.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
