--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/material": "^5.14.11",
+    "@types/jquery": "^3.5.20",
     "@types/leaflet": "^1.9.6",
     "dotenv": "^16.3.1",
     "nodemon": "^3.0.1"
