clickable scatter plot

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@types/node": "^16.18.53",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "ag-charts-community": "^8.2.0",
+    "ag-charts-react": "^8.2.0",
     "all": "^0.0.0",
+    "apexcharts": "^3.43.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "browserify-zlib": "^0.2.0",
@@ -28,6 +31,7 @@
     "mongoose": "^7.5.3",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-icons": "^4.11.0",
