--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "browserify-zlib": "^0.2.0",
+    "d3": "^7.8.5",
     "express": "^4.18.2",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.1",
@@ -75,6 +76,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/material": "^5.14.11",
+    "@types/d3": "^7.4.1",
     "@types/jquery": "^3.5.20",
     "@types/leaflet": "^1.9.6",
     "dotenv": "^16.3.1",
