--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "leaflet": "^1.9.4",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
+    "mui": "^0.0.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
