--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "proxy": "http://localhost:4000",
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.11",
+    "@mui/joy": "^5.0.0-beta.11",
     "@mui/lab": "^5.0.0-alpha.146",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -22,8 +21,8 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "browserify-zlib": "^0.2.0",
-    "d3": "^7.8.5",
     "cors": "^2.8.5",
+    "d3": "^7.8.5",
     "express": "^4.18.2",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.1",
