--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@turf/turf": "^6.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.53",
     "@types/react": "^18.2.22",
@@ -22,8 +23,8 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "browserify-zlib": "^0.2.0",
-    "d3": "^7.8.5",
     "cors": "^2.8.5",
+    "d3": "^7.8.5",
     "express": "^4.18.2",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.1",
