fixed build failures with server

--- a/server/restful-api/src/main/resources/application.properties
+++ b/server/restful-api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=4000
-spring.data.mongodb.uri=mongodb+srv://admin:jjtR0Hegh5KMcUHV@cluster0.0h5gltt.mongodb.net/StateMap?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://admin:jjtR0Hegh5KMcUHV@cluster0.0h5gltt.mongodb.net/StateMap
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 spring.data.mongodb.database=StateMap
