updated ui to include leftside detail table

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "java.configuration.updateBuildConfiguration": "interactive",
     "cSpell.words": [
         "appbar",
+        "Dismeasure",
         "seahawks",
         "statemap"
     ]
