--- a/server/restful-api/pom.xml
+++ b/server/restful-api/pom.xml
@@ -17,6 +17,11 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+	    <dependency>
+        	<groupId>org.geotools</groupId>
+        	<artifactId>gt-main</artifactId>
+        	<version>25.2</version> <!-- Replace with the latest version -->
+    	</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
@@ -42,7 +47,22 @@
 			<version>2.10.1</version>
 		</dependency>
 	</dependencies>
-
+	<repositories>
+	<repository>
+		<id>osgeo</id>
+		<name>OSGeo Release Repository</name>
+		<url>https://repo.osgeo.org/repository/release/</url>
+		<snapshots><enabled>false</enabled></snapshots>
+		<releases><enabled>true</enabled></releases>
+	  </repository>
+	  <repository>
+		<id>osgeo-snapshot</id>
+		<name>OSGeo Snapshot Repository</name>
+		<url>https://repo.osgeo.org/repository/snapshot/</url>
+		<snapshots><enabled>true</enabled></snapshots>
+		<releases><enabled>false</enabled></releases>
+	  </repository>
+	</repositories>
 	<build>
 		<plugins>
 			<plugin>
