--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "browserify-zlib": "^0.2.0",
+    "chart.js": "^4.4.1",
     "cors": "^2.8.5",
     "d3": "^7.8.5",
     "express": "^4.18.2",
@@ -38,6 +39,7 @@
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-icons": "^4.11.0",
