--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/joy": "^5.0.0-beta.11",
     "@mui/lab": "^5.0.0-alpha.146",
+    "@mui/x-charts": "^6.18.3",
     "@mui/x-data-grid": "^6.18.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
